# soundtray

./: README.md  index.html  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  player.rs  tray.rs  utils.rs
