[package]
name = "soundtray"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = "http://github.com/riipandi/soundtray"
rust-version = "1.66"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.3", features = ["icon-ico", "icon-png", "macos-private-api", "shell-open", "system-tray"] }
tauri-plugin-positioner = { version = "1.0", features = ["system-tray"] }
tokio = { version = "1.28", features = ["time"] }
tokio-tungstenite = { version = "0.19", features = ["native-tls"] }
anyhow = "1.0"
once_cell = "1.17"
futures-util = "0.3"
rodio = "0.17"
reqwest = { version = "0.11", features = ["blocking", "json"] }
minimp3 = "0.5"
version-compare = "0.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2.137"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
